# noterm

./: Cargo.toml  README.md  ui.txt
src/: lib.rs
src/backend/: commands.rs  config.rs  constants.rs  messages.rs  mod.rs
src/ui/: notes.rs
