[package]
name = "noterm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="libra"
path="src/lib.rs"

[[bin]]
name="noterm"
path="bin/noterm.rs"


[[bin]]
name="backend"
path="src/backend/bin/main.rs"

[[bin]]
name="ui"
path="src/ui/bin/ui.rs"

[dependencies]
chrono = "0.4.26"
clap = "2.34.0"
serde = { version = "1.0.164", features = ["derive"]}
serde_json = "1.0.97"
tui = { package = "ratatui", version = "0.22", default-features = false, features = ['crossterm', 'serde', 'all-widgets'] }
crossterm = { version = "0.19", features = [ "serde" ] }
